# Tweet-Sentiment-Analyzer

./: CMakeLists.txt  README.md  main.cpp
Classifier/: Classifier.cpp  Classifier.h
Trainer/: Trainer.cpp  Trainer.h
Tweet/: Tweet.cpp  Tweet.h
Utilities/: pipelines.cpp  pipelines.h
Utilities/Tweet/: Tweet.cpp  Tweet.h
data/: test_dataset_10k.csv
utilities/: StopWords.h  pipelines.cpp  pipelines.h
utilities/Feature/: Feature.cpp  Feature.h
utilities/Pipelines/: pipelines.cpp  pipelines.h
utilities/Tweet/: Tweet.cpp  Tweet.h
utilities/Word/: Word.cpp  Word.h
